# agent-bench

./: .gitignore  slides.md  test.py  thesis.tex
agent-bench/: .gitignore  README.md  pyproject.toml
agent-bench/configs/: allowlist_confirm.yaml  baseline.yaml  bash_allowlist.yaml  labeling_validation.yaml  memory_enabled.yaml
agent-bench/data/: attack_tasks.jsonl  benign_tasks.jsonl  shell_escape_attack_tasks.jsonl
agent-bench/data/malicious_pages/: e1_report_attack.html  e1_report_benign.html  e5_shell_escape_attack.html
agent-bench/data/malicious_pdfs/: e3_vendor_alpha.txt  e3_vendor_attack.txt
agent-bench/data/memory_poisoning/: e4_memory_attack.html
agent-bench/data/tool_outputs/: e2_vendor_status_attack.txt
agent-bench/results/: allowlist_confirm_interactive_gemini.csv  allowlist_confirm_interactive_gemini_aggregate.csv  baseline_gemini.csv  baseline_gemini_aggregate.csv  labeling_validation_gemini.csv  labeling_validation_gemini_aggregate.csv  memory_enabled_gemini_aggregate.csv  memory_enabled_interactive_gemini.csv  thesis_profile_summary.csv  thesis_trace_summary.csv
agent-bench/results/traces/: e1_web_summary_attack__allowlist_confirm__20260506T175918003634Z.jsonl  e1_web_summary_attack__baseline__20260506T175845077561Z.jsonl  e1_web_summary_attack__labeling_validation__20260506T180859920171Z.jsonl  e1_web_summary_attack__memory_enabled__20260506T180930891409Z.jsonl  (+13 more)
agent-bench/src/agent/: __init__.py  cli.py  (+7 more)
agent-bench/tests/: test_gemini_planner.py  test_mcp.py  test_memory.py  test_mock_apis.py  test_policies.py  test_runner.py
(+23 files in other folders)
